--- a/views/cadastro_login.ejs
+++ b/views/cadastro_login.ejs
@@ -17,7 +17,7 @@
         <% } %>
         
         <% if (formType === 'login') { %>
-            <form id="loginForm" action="/login" method="post">
+            <form id="loginForm" action="/auth/login" method="post">
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" class="input-field" placeholder="Seu e-mail" required>
 
@@ -27,9 +27,9 @@
                 <button type="submit" class="btn-login">Entrar</button>
             </form>
 
-            <p class="register-text">Não tem uma conta? <a href="/register">Clique aqui!</a></p>
+            <p class="register-text">Não tem uma conta? <a href="/auth/register">Clique aqui!</a></p>
         <% } else { %>
-            <form id="registerForm" action="/register" method="post">
+            <form id="registerForm" action="/auth/register" method="post">
                 <label for="username">Nome</label>
                 <input type="text" id="username" name="username" class="input-field" placeholder="Seu nome" required>
 
