--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                     <input type="text" placeholder="Pesquise no Quizze's">
                 </div>
 
-                <a href="/login" class="btn btn-outline-primary" role="button" aria-pressed="true">Login</a>
+                <a href="/auth/login" class="btn btn-outline-primary" role="button" aria-pressed="true">Login</a>
             </div>
         </header>
 
