--- a/src/views/auth.ejs
+++ b/src/views/auth.ejs
@@ -45,7 +45,7 @@
                 <button type="submit" class="btn-login">Cadastrar</button>
             </form>
 
-            <p class="login-text">Já possui uma conta? <a href="/login">Entre aqui!</a></p>
+            <p class="login-text">Já possui uma conta? <a href="/auth/login">Entre aqui!</a></p>
         <% } %>
     </div>
 </body>
