--- a/src/views/pages/auth.ejs
+++ b/src/views/pages/auth.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="/images/logo.png" alt="Logo Quiz" class="logo">
+        <a href="/"><img src="/images/logo.png" alt="Logo Quiz" class="logo"></a>
 
         <% if (typeof error !== 'undefined' && error) { %>
             <div class="error-message">
