--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -10,24 +10,7 @@
     </head>
 
     <body>
-        <header>
-            <img src="/images/logo.png" alt="Logo da Empresa" class="logo">
-
-            <div class="header-right">
-                <nav class="nav-links">
-                    <a href="/">Home</a>
-                    <a href="#">Criar</a>
-                </nav>
-    
-                <div class="search-bar">
-                    <i class="fas fa-search"></i>
-                    <input type="text" placeholder="Pesquise no Quizze's">
-                </div>
-
-                <a href="/auth/login" class="btn btn-outline-primary" role="button" aria-pressed="true">Login</a>
-            </div>
-        </header>
-
+        <%- include('../components/header') %>
         <main class="container-fluid">
             <section class="themes">
                 <h2>Temas</h2>
