--- a/src/views/components/head.ejs
+++ b/src/views/components/head.ejs
@@ -1,8 +1,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><% title %></title>
+    <title>Quizze's</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+
+    <% if (typeof pageCSS !== 'undefined') { %>
+        <% pageCSS.forEach(function(css) { %>
+            <link rel="stylesheet" href="<%= css %>">
+        <% }); %>
+    <% } %>
+    
+    <%- typeof extraCSS !== 'undefined' ? extraCSS : '' %>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
