feat: create quiz.

--- a/src/views/components/head.ejs
+++ b/src/views/components/head.ejs
@@ -2,7 +2,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizze's</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+
+    <% if (typeof skipMainCSS === 'undefined' || !skipMainCSS) { %>
+        <link rel="stylesheet" href="/stylesheets/style.css">
+    <% } %>
 
     <% if (typeof pageCSS !== 'undefined') { %>
         <% pageCSS.forEach(function(css) { %>
