--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -4,7 +4,7 @@
     <div class="header-right">
         <nav class="nav-links">
             <a href="/">Home</a>
-            <a href="/quizz/create">Criar</a>
+            <a href="/quiz/create">Criar</a>
         </nav>
 
         <div class="search-bar">
