feat: get quiz.

--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -19,7 +19,7 @@
                     <h3 class="quiz-card-title px-3">
                         <%= quizz.title %>
                     </h3>
-                    <a href="/?quizz=<%= quizz.id %>" class="quizz-link btn play-btn">
+                    <a href="/quiz/<%= quizz.id %>" class="quizz-link btn play-btn">
                         <i class="fas fa-play me-2"></i>
                         Jogar
                     </a>
